fixed sidebar overflow

--- a/django-frontend/src/app/static/css/sidebar.css
+++ b/django-frontend/src/app/static/css/sidebar.css
@@ -130,7 +130,6 @@
 /* modify account data */
 
 .account-container {
-    overflow: hidden;
     margin-top: 10px;
     margin-bottom: 10px;
     background-color: #232b3f;
